Fix SQ issues related to Java Upgrade