@@ -21,7 +21,6 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.sonar.api.utils.WildcardPattern;
 
 public class FileProvider {
@@ -39,7 +38,7 @@ public class FileProvider {
       return walk
               .filter(p -> !Files.isDirectory(p) && pattern.match(toUnixString(baseDir.relativize(p))))
               .map(Path::toFile)
-              .collect(Collectors.toList());
+              .toList();
     } catch (IOException e) {
       throw new IllegalStateException("Failed to get matching files.", e);
     }
